--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 .container {
     text-align: center;
     height: 100px;
-    border: 1px solid black;
 }
 
 .timer {
@@ -9,14 +8,20 @@
 }
 
 .screen {
-    border: 1px solid black;
     text-align: center;
     padding-top: 10px;
     padding-bottom: 10px;
     height: 200px;
 }
 
-.todolist {
-    border: 1px solid black;
+.todolistInput {
     text-align: center;
+    font-size: 40px;
+    height: 65px;
+}
+
+.todolistOutput {
+    text-align: center;
+    font-size: 30px;
+    height: 250px;
 }
